--- a/application.yml
+++ b/application.yml
@@ -1,11 +1,6 @@
-
-      
 spring: 
-  profiles: dev 
   application: 
-    name: springcloud-demo-config-dev 
-    
-spring: 
-  profiles: test 
-  application: 
-    name: springcloud-demo-config-test 
+    name: springcloud-demo-config-test-dev 
+  profiles: 
+    active: 
+    - dev
