--- a/application.yml
+++ b/application.yml
@@ -1,13 +1,11 @@
 
 --- 
 spring: 
+  profiles: dev  #开发环境
   application: 
     name: springcloud-demo-config-dev 
-  profiles: 
-    active: 
 --- 
 spring: 
+  profiles: test  #测试环境
   application: 
     name: springcloud-demo-config-test 
-  profiles: 
-    active: 
