--- a/springcloud-demo-config-client.yml
+++ b/springcloud-demo-config-client.yml
@@ -3,8 +3,7 @@ server:
 spring:
   profiles: dev
   application:
-   name: springcloud-demo-config-client
-   
+   name: springcloud-demo-config-client   
 eureka:
   client:
     service-url:
@@ -17,3 +16,7 @@ spring:
   profiles: test
   application:
   name: springcloud-demo-config-client
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-test.com:7001/eureka/
